# Ariel-Data-Model

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
api/: main.py
ariel_pred/: __init__.py  config.py  dataset.py  features.py  metrics.py  models.py  plots.py  preprocessing.py  sigma.py  submission.py  transit.py  utils.py
data_download/: kaggle-data-download.ipynb  specific-planets-download.sh
frontend/: index.html  package-lock.json  package.json
notebooks/: LROnVariousFeaturesSigmaCalculator-test.ipynb  classic-ml-for-sigma.ipynb  cnn_clamped_values.ipynb  constant-sigma-scaling.ipynb  data-calibration.ipynb  deeper-s-values-cnn-with-star-info.ipynb  new-sigma-scaling-technique.ipynb  nn_with_sigm_pred.ipynb  oot-var-based-sigma-calculator.ipynb  output-deviation-check.ipynb  per-channel-fluctuations.ipynb  predections-smoothing.ipynb  s-value-analysis.ipynb  s-value-finder.ipynb  s-values-and-scaled-sigma.ipynb  s-values-cnn-input-features.ipynb  s-values-cnn-with-star-info.ipynb  s-values-cnn.ipynb  s-values-lr.ipynb  s-values-scaled-sigma-val-test.ipynb  s-values-spectrum-only-cnn.ipynb  sergei.ipynb  sigma-accuracy-check.ipynb  sigma-as-rmse-percentile-test.ipynb  star-info-experiments.ipynb  streamlit-data-prep.ipynb  subset-creator.ipynb  test-new-transit-constraints.ipynb  transit_detection.ipynb  various-star-info-in-cnn.ipynb  white_cure_plotting.ipynb
scripts/: lr_sigma_with_deep_nn.py  lr_sigma_with_nn.py  s_value.py  s_values_cnn.py  s_values_cnn_constant_sigma.py  s_values_scaled_sigma.py  s_values_signal_var_sigma.py  (+6 more)
(+20 files in other folders)
